new-exercices/4-scc/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress-rbac
  namespace: nginx
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    haproxy.router.openshift.io/rewrite-target: /
    route.openshift.io/termination: "edge"
spec:
  #tls:
  #  - hosts:
  #    - https-example.foo.com
  #  secretName: testsecret-tls
  rules:
  - host: my-nginx-ingress-rbac.apps-crc.testing
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-nginx-svc
              port:
                #number: 80
                name: my-http-port
        #- path: /
        #  pathType: Prefix
        #  backend:
        #    service:
        #      name: my-nginx-svc
        #      port:
        #        #number: 443
        #        name: my-https-port
